--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -1841,6 +1841,49 @@
 							</select> 
 						</div>
 					</div>
+					
+					<h4>File/Directory Permissions</h4>
+				    	
+						
+						<div class="alert-box alert radius">
+							<strong>
+								Only change these values if you are familiar with file
+								and directory permissions on your server acount! 
+							</strong>
+						</div>
+						
+						<div class="row">
+							<div class="small-6 columns">
+								<label for="security_default_file_permissions">
+									Default File Permissions:
+								</label>
+								<select name="security_default_file_permissions" id="security_default_file_permissions">
+									<option value="600" selected="selected">600 (most secure)</option> 
+									<option value="644" selected="selected">644 (default, more secure)</option> 
+									<option value="666">666 (less secure)</option> 
+								</select> 
+							</div>
+					
+							<div class="small-6 columns">
+								<label for="security_default_file_permissions">
+									Default Directory Permissions:
+								</label>
+								<select name="security_default_directory_permissions" id="security_default_directory_permissions">
+									<option value="755" selected="selected">755 (default)</option> 
+									<option value="754">754</option> 
+									<option value="744">744</option> 
+									<option value="740">740</option> 
+									<option value="700">700</option> 
+								
+								</select> 
+							</div>
+						</div>
+
+					
+					
+					
+				
+					
 				</div>
 			</div> 
 		<!-- /tmpl_if --> 
