More work on adding custom file/directory permissions.

--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -1847,9 +1847,10 @@
 						
 						<div class="alert-box alert radius">
 							<strong>
-								Only change these values if you are familiar with file
-								and directory permissions on your server acount! 
-							</strong>
+								WARNING! 
+							</strong> Only change these values if you are intimately 
+							familiar with your server setup, and know that any 
+							changes will work!
 						</div>
 						
 						<div class="row">
@@ -1858,8 +1859,8 @@
 									Default File Permissions:
 								</label>
 								<select name="security_default_file_permissions" id="security_default_file_permissions">
-									<option value="600" selected="selected">600 (most secure)</option> 
-									<option value="644" selected="selected">644 (default, more secure)</option> 
+									<option value="600" selected="selected">600 (extremely restricted)</option> 
+									<option value="644" selected="selected">644 (default)</option> 
 									<option value="666">666 (less secure)</option> 
 								</select> 
 							</div>
