--- a/dada/installer-disabled/templates/installer_install_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_install_dada_mail_scrn.tmpl
@@ -124,7 +124,8 @@
 <div class="text-center"> 
 <input type="button" 
 	value="Move the 'dada/installer' directory; disable the 'install.cgi' script" 
-	class="cautionary button expand" 
+	class="cautionary button expand"
+	data-chmod="<!-- tmpl_var security_default_file_permissions default="644"-->" 
 	id="move_installer_dir" />	
 </div> 
 </form> 
