--- a/dada/installer-disabled/templates/rich_filemanager_filemanager-config-json.tmpl
+++ b/dada/installer-disabled/templates/rich_filemanager_filemanager-config-json.tmpl
@@ -14,8 +14,8 @@
         "fileSorting": "NAME_ASC",
         "folderPosition": "bottom",
         "quickSelect": false,
-        "charsLatinOnly": false,
         "logger": false,
+        "allowChangeExtensions": false,
         "capabilities": [
             "select",
             "upload",
@@ -24,7 +24,8 @@
             "copy",
             "move",
             "replace",
-            "delete"
+            "delete",
+            "extract"
         ]
     },
     "filetree": {
@@ -53,51 +54,12 @@
         "requestParams": []
     },
     "security": {
-        "allowFolderDownload": true,
-        "allowChangeExtensions": false,
-        "allowNoExtension": false,
-        "normalizeFilename": true
+        "allowNoExtension": false
     },
     "upload": {
         "multiple": true,
         "maxNumberOfFiles": 5,
-        "paramName": "files",
-        "chunkSize": false,
-        "fileSizeLimit": 16000000,
-        "policy": "DISALLOW_ALL",
-        "restrictions": [
-            "jpg",
-            "jpe",
-            "jpeg",
-            "gif",
-            "png",
-            "svg",
-            "txt",
-            "pdf",
-            "odp",
-            "ods",
-            "odt",
-            "rtf",
-            "doc",
-            "docx",
-            "xls",
-            "xlsx",
-            "ppt",
-            "pptx",
-            "csv",
-            "ogv",
-            "avi",
-            "mkv",
-            "mp4",
-            "webm",
-            "m4v",
-            "ogg",
-            "mp3",
-            "wav",
-            "zip",
-            "rar",
-            "md"
-        ]
+        "chunkSize": false
     },
     "viewer": {
         "absolutePath": true,
@@ -161,8 +123,6 @@
         "codeMirrorRenderer": {
             "enabled": true,
             "extensions": [
-                "php",
-                "java",
                 "txt",
                 "csv"
             ]
@@ -197,5 +157,5 @@
         "extra_js_async": true
     },
     "url": "https://github.com/servocoder/RichFilemanager",
-    "version": "2.3.0"
+    "version": "2.3.2"
 }
