--- a/dada/installer-disabled/templates/dada_config.tmpl
+++ b/dada/installer-disabled/templates/dada_config.tmpl
@@ -123,7 +123,7 @@ $PROFILE_OPTIONS = {
 		
 	enabled                         => <!-- tmpl_var profiles_enabled default="0" -->, 
 	profile_email                   => '<!-- tmpl_var profiles_profile_email default="" -->', 
-	profile_host_list               => '<!-- tmpl_var profiles_host_list default="" -->', 
+	profile_host_list               => '<!-- tmpl_var profiles_profile_host_list default="" -->', 
 	enable_captcha                  => <!-- tmpl_var profiles_enable_captcha  default="0" -->, 
 	enable_magic_subscription_forms => <!-- tmpl_var profiles_enable_magic_subscription_forms  default="0" -->, 
 	
@@ -142,7 +142,6 @@ $PROFILE_OPTIONS = {
 	
 	features => 
 	{ 
-		help                        => <!-- tmpl_var profiles_help  default="0" -->, 
 		login                       => <!-- tmpl_var profiles_login  default="0" -->, 
 		register                    => <!-- tmpl_var profiles_register default="0"  -->, 
 		password_reset              => <!-- tmpl_var profiles_password_reset  default="0" -->, 
