--- a/dada/templates/list_archive_index_screen.tmpl
+++ b/dada/templates/list_archive_index_screen.tmpl
@@ -5,8 +5,10 @@
 
 <!-- tmpl_include list_breadcrumbs_widget.tmpl -->
 
-<!-- tmpl_if list_settings.archive_search_form -->
-	<!-- tmpl_include list_archive_search_form_widget.tmpl -->
+<!-- tmpl_if allowed_to_view_archives -->
+	<!-- tmpl_if list_settings.archive_search_form -->
+		<!-- tmpl_include list_archive_search_form_widget.tmpl -->
+	<!-- /tmpl_if -->
 <!-- /tmpl_if -->
 
 <!-- tmpl_if entries --> 
