A little bit more organization of options

--- a/dada/templates/plugins/bridge/default.tmpl
+++ b/dada/templates/plugins/bridge/default.tmpl
@@ -1047,15 +1047,17 @@
 		</div>
 		
 		<div class="row">
-			<div class="small-12 columns">
-				<h4>
+			<div class="small-1 columns"></div>
+			<div class="small-11 columns">
+				<h5>
 					Find SpamAssassin Score By: 
-				</h4>
+				</h5>
 			</div>
 		</div> 
 
 		<div class="row">
-			<div class="small-12 columns">
+			<div class="small-1 columns"></div>
+			<div class="small-11 columns">
 				<label for="looking_for_embedded_headers">
 					<input 
 						type="radio" 
@@ -1070,7 +1072,8 @@
 		</div>
 		
 		<div class="row">
-			<div class="small-12 columns">
+			<div class="small-1 columns"></div>
+			<div class="small-11 columns">
 				<label for="calling_spamassassin_directly">
 					<input 
 						type="radio" 
@@ -1084,7 +1087,8 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="small-12 columns">
+			<div class="small-1 columns"></div>
+			<div class="small-11 columns">
 				<label for="ignore_spam_messages_with_status_of">
 					SpamAssassin Score Threshold
 				</label>
@@ -1094,14 +1098,16 @@
 
 		
 		<div class="row">
-			<div class="small-12 columns">
-				<h4>
+			<div class="small-2 columns"></div>
+			<div class="small-10 columns">
+				<h5>
 					If Scored as SPAM:
-				</h4>
+				</h5>
 			</div>
 		</div>
 		<div class="row">
-			<div class="small-12 columns">
+			<div class="small-2 columns"></div>
+			<div class="small-10 columns">
 				<label for="rejected_spam_messages_ignore_spam">
 					<input 
 						type="radio" 
@@ -1115,7 +1121,8 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="small-12 columns">
+			<div class="small-2 columns"></div>
+			<div class="small-10 columns">
 				<label for="rejected_spam_messages_send_spam_rejection_message">
 					<input 
 						type="radio" 
@@ -1143,13 +1150,15 @@
 			</div>
 		</div> 
 		<div class="row">
-			<div class="small-12 columns">
+			<div class="small-1 columns"></div>
+
+			<div class="small-11 columns">
 				<input 
 					type="text" 
 					name="file_attachments_to_strip" 
 					id="file_attachments_to_strip"
 					value="<!-- tmpl_var list_settings.file_attachments_to_strip -->"
-					placeholder="seperated by spaces"
+					placeholder="separated by spaces"
 				>
 			</div>
 		</div> 
