--- a/dada/installer-disabled/templates/rich_filemanager-filemanager-php.tmpl
+++ b/dada/installer-disabled/templates/rich_filemanager-filemanager-php.tmpl
@@ -1,54 +1,119 @@
 <?php
 ini_set('session.save_path',realpath('<!-- tmpl_var i_rich_filemanager_session_dir -->'));
 
-
 /**
- *	Filemanager PHP connector
- *  Initial class, put your customizations here
+ * Entry point for PHP connector, put your customizations here.
  *
- *	@license	MIT License
- *	@author		Riaan Los <mail (at) riaanlos (dot) nl>
- *  @author		Simon Georget <simon (at) linea21 (dot) com>
- *  @author		Pavel Solomienko <https://github.com/servocoder/>
- *	@copyright	Authors
+ * @license     MIT License
+ * @author      Pavel Solomienko <https://github.com/servocoder/>
+ * @copyright   Authors
  */
 
 // only for debug
 // error_reporting(E_ERROR | E_WARNING | E_PARSE | E_NOTICE);
 // ini_set('display_errors', '1');
 
-require_once('application/Fm.php');
-require_once('application/FmHelper.php');
+require 'vendor/autoload.php';
 
-function auth()
-{
-    // IMPORTANT : by default Read and Write access is granted to everyone.
-    // You can insert your own code over here to check if the user is authorized.
-    // If you use a session variable, you've got to start the session first (session_start())
-	
+// fix display non-latin chars correctly
+// https://github.com/servocoder/RichFilemanager/issues/7
+setlocale(LC_CTYPE, 'en_US.UTF-8');
+
+// fix for undefined timezone in php.ini
+// https://github.com/servocoder/RichFilemanager/issues/43
+if(!ini_get('date.timezone')) {
+    date_default_timezone_set('GMT');
+}
+
+
+// This function is called for every server connection. It must return true.
+//
+// Implement this function to authenticate the user, for example to check a
+// password login, or restrict client IP address.
+//
+// This function only authorizes the user to connect and/or load the initial page.
+// Authorization for individual files or dirs is provided by the two functions below.
+//
+// NOTE: If this function returns false, the user will simply see an error. It
+// probably makes more sense to redirect the user to a login page instead.
+//
+// NOTE: If using session variables, the session must be started first (session_start()).
+function fm_authenticate()
+{	
     session_start();
     return isset($_SESSION['rfm_authenticated']) && $_SESSION['rfm_session_id'] == $_COOKIE["dadalogin"];
 	
 }
 
-$config = array();
+
+// This function is called before any filesystem read operation, where
+// $filepath is the file or directory being read. It must return true,
+// otherwise the read operation will be denied.
+//
+// Implement this function to do custom individual-file permission checks, such as
+// user/group authorization from a database, or session variables, or any other custom logic.
+//
+// Note that this is not the only permissions check that must pass. The read operation
+// must also pass:
+//   * Filesystem permissions (if any), e.g. POSIX `rwx` permissions on Linux
+//   * The $filepath must be allowed according to config['patterns'] and config['extensions']
+//
+function fm_has_read_permission($filepath)
+{
+    // Customize this code as desired.
+    return true;
+}
+
+
+// This function is called before any filesystem write operation, where
+// $filepath is the file or directory being written to. It must return true,
+// otherwise the write operation will be denied.
+//
+// Implement this function to do custom individual-file permission checks, such as
+// user/group authorization from a database, or session variables, or any other custom logic.
+//
+// Note that this is not the only permissions check that must pass. The write operation
+// must also pass:
+//   * Filesystem permissions (if any), e.g. POSIX `rwx` permissions on Linux
+//   * The $filepath must be allowed according to config['patterns'] and config['extensions']
+//   * config['read_only'] must be set to false, otherwise all writes are disabled
+//
+function fm_has_write_permission($filepath)
+{
+    // Customize this code as desired.
+    return true;
+}
+
+
+$config = [];
 
 // example to override the default config
-//$config = array(
-//    'upload' => array(
-//        'policy' => 'DISALLOW_ALL',
-//        'restrictions' => array(
-//            'pdf',
-//        ),
-//    ),
-//);
+//$config = [
+//    'security' => [
+//        'readOnly' => true,
+//        'extensions' => [
+//            'policy' => 'ALLOW_LIST',
+//            'restrictions' => [
+//                'jpg',
+//                'jpe',
+//                'jpeg',
+//                'gif',
+//                'png',
+//            ],
+//        ],
+//    ],
+//];
 
-$fm = Fm::app()->getInstance($config);
+$app = new \RFM\Application();
+
+$local = new \RFM\Repository\Local\Storage($config);
 
 // example to setup files root folder
-//$fm->setFileRoot('userfiles', true);
+//$local->setRoot('userfiles', true);
 
-// example to set list of allowed actions
-//$fm->setAllowedActions(["select", "move"]);
+$app->setStorage($local);
 
-$fm->handleRequest();
+// set application API
+$app->api = new RFM\Api\LocalApi();
+
+$app->run();
