--- a/dada/installer-disabled/templates/rich_filemanager_connector_config_local.tmpl
+++ b/dada/installer-disabled/templates/rich_filemanager_connector_config_local.tmpl
@@ -1,6 +1,6 @@
 <?php
 /**
- *  Filemanager server-side configuration file
+ *  RichFilemanager configuration file for Local storage.
  *
  *  @license     MIT License
  *  @author      Pavel Solomienko <https://github.com/servocoder/>
@@ -9,24 +9,10 @@
 
 $config = [
     /**
-     * Path to the Filemanager folder.
-     * Set path in case the PHP connector class was moved or extended.
-     * If you use the default Filemanager files structure it will be defined automatically as ancestor of the PHP connector class.
-     * @var string|null
-     */
-    "fmPath" => null,
-    /**
-     * Filemanager plugin to use.
-     * Currently available plugins:
-     *
-     * "s3" - AWS S3 storage plugin (PHP SDK v.3)
-     */
-    "plugin" => null,
-    /**
      * Configure Logger class
      */
     "logger" => [
-        "enabled" => false,
+        "enabled" => true,
         /**
          * Default value "null".
          * Full path to log file, e.g. "/var/log/filemanager/logfile".
@@ -52,7 +38,7 @@ $config = [
          * - absolute path in case `serverRoot` set to "false", e.g. "/var/www/html/filemanager/userfiles/"
          * - relative path in case `serverRoot` set to "true", e.g. "/filemanager/userfiles/"
          */
-	    "fileRoot" => "<!-- tmpl_var uploads_directory -->",
+       	"fileRoot" => "<!-- tmpl_var uploads_directory -->",
         /**
          * Format of the date to display. See http://www.php.net/manual/en/function.date.php
          */
@@ -66,80 +52,103 @@ $config = [
          * PHP requires INTL extension installed, otherwise all non-latin characters will be stripped.
          */
         "charsLatinOnly" => false,
-        /**
-         * Default value "false".
-         * Means all capabilities handled by the application are available.
-         * You can set only some ot them as array to restrict the allowed actions.
-         * For the full list of capabilities @see BaseFilemanager::actions_list
-         */
-        "capabilities" => false,
-        /**
-         * Default value "false".
-         * Allow users to download a Zip archive of a specific folder and contents (including subfolders).
-         */
-        "allowFolderDownload" => false,
     ],
     /**
      * Security section
      */
     "security" => [
         /**
-         * Default value "false".
-         * If set to "true", allow users to upload file with no extension.
+         * Default value "false". Allow write operations.
+         * Set value to "true" to disable all modifications to the filesystem, including thumbnail generation.
          */
-        "allowNoExtension" => false,
+        "readOnly" => false,
+        /**
+         * Filename extensions are compared against this list, after the right-most dot '.'
+         * Matched files will be filtered from listing results, and will be restricted from all file operations (both read and write).
+         */
+        "extensions" => [
+            /**
+             * Default value "ALLOW_LIST". Takes value "ALLOW_LIST" / "DISALLOW_LIST".
+             * If is set to "ALLOW_LIST", only files with extensions that match `restrictions` list will be allowed, all other files are forbidden.
+             * If is set to "DISALLOW_LIST", all files are allowed except of files with extensions that match `restrictions` list.
+             */
+            "policy" => "ALLOW_LIST",
+            /**
+             * Default value "true".
+             * Whether extension comparison should be case sensitive.
+             */
+            "ignoreCase" => true,
+            /**
+             * List of allowed / disallowed extensions, depending on the `policy` value.
+             * To allow / disallow files without extension, add / remove the empty string "" to / from this list.
+             */
+            "restrictions" => [
+                "",
+                "jpg",
+                "jpe",
+                "jpeg",
+                "gif",
+                "png",
+                "svg",
+                "txt",
+                "pdf",
+                "odp",
+                "ods",
+                "odt",
+                "rtf",
+                "doc",
+                "docx",
+                "xls",
+                "xlsx",
+                "ppt",
+                "pptx",
+                "csv",
+                "ogv",
+                "avi",
+                "mkv",
+                "mp4",
+                "webm",
+                "m4v",
+                "ogg",
+                "mp3",
+                "wav",
+                "zip",
+                "md",
+            ],
+        ],
+        /**
+         * Files and folders paths relative to the user storage folder (see `fileRoot`) are compared against this list.
+         * Matched items will be filtered from listing results, and will be restricted from all file operations (both read and write).
+         */
+        "patterns" => [
+            /**
+             * Default value "ALLOW_LIST". Takes value "ALLOW_LIST" / "DISALLOW_LIST".
+             * If is set to "ALLOW_LIST", only files and folders that match `restrictions` list will be allowed, all other files are forbidden.
+             * If is set to "DISALLOW_LIST", all files and folders are allowed except of ones that match `restrictions` list.
+             */
+            "policy" => "DISALLOW_LIST",
+            /**
+             * Default value "true".
+             * Whether patterns comparison should be case sensitive.
+             */
+            "ignoreCase" => true,
+            /**
+             * List of allowed / disallowed patterns, depending on the `policy` value.
+             */
+            "restrictions" => [
+                // files
+                "*/.htaccess",
+                "*/web.config",
+                // folders
+                "*/_thumbs/*",
+                "*/.CDN_ACCESS_LOGS/*",
+            ],
+        ],
         /**
          * Default value "true".
          * Sanitize file/folder name, replaces gaps and some other special chars.
          */
         "normalizeFilename" => true,
-        /**
-         * Array of file names excluded from listing.
-         */
-        "excluded_files" => [
-            ".htaccess",
-            "web.config",
-        ],
-        /**
-         * Array of folder names excluded from listing.
-         */
-        "excluded_dirs" => [
-            "_thumbs",
-            ".CDN_ACCESS_LOGS",
-        ],
-        /**
-         * Files excluded from listing, using REGEX.
-         */
-        "excluded_files_REGEXP" => "/^\\./",
-        /**
-         * Folders excluded from listing, using REGEX.
-         */
-        "excluded_dirs_REGEXP" => "/^\\./",
-        /**
-         * Array of files extensions permitted for editing.
-         */
-        "editRestrictions" => [
-            "txt",
-            "csv",
-            "md",
-        ],
-    ],
-    /**
-     * File types that are filtered out from the output list based on the type of filter ('getfolder' request)
-     */
-    "outputFilter" => [
-        /**
-         * File types to be filtered out for "images" filter
-         */
-        "images" => [
-            "jpg",
-            "jpe",
-            "jpeg",
-            "gif",
-            "png",
-            "svg",
-            "bmp",
-        ],
     ],
     /**
      * Upload section
@@ -152,57 +161,10 @@ $config = [
          */
         "fileSizeLimit" => 16000000,
         /**
-         * Default value "files".
+         * Default value "false".
          * If set to "true" files will be overwritten on uploads if they have same names, otherwise an index will be added.
          */
         "overwrite" => false,
-        /**
-         * Default value "false".
-         * If set to "true", only images are accepted for upload.
-         */
-        "imagesOnly" => false,
-        /**
-         * Default value "DISALLOW_ALL". Takes value "ALLOW_ALL" / "DISALLOW_ALL".
-         * If is set to "DISALLOW_ALL", only files with extensions contained in `restrictions` array will be allowed.
-         * If is set to "ALLOW_ALL", all files will be accepted for upload except for files with extensions contained in `restrictions`.
-         */
-        "policy" => "DISALLOW_ALL",
-        /**
-         * Array of files extensions permitted for uploading/creating
-         */
-        "restrictions" => [
-            "jpg",
-            "jpe",
-            "jpeg",
-            "gif",
-            "png",
-            "svg",
-            "txt",
-            "pdf",
-            "odp",
-            "ods",
-            "odt",
-            "rtf",
-            "doc",
-            "docx",
-            "xls",
-            "xlsx",
-            "ppt",
-            "pptx",
-            "csv",
-            "ogv",
-            "avi",
-            "mkv",
-            "mp4",
-            "webm",
-            "m4v",
-            "ogg",
-            "mp3",
-            "wav",
-            "zip",
-            "rar",
-            "md",
-        ],
     ],
     /**
      * Images section
