We need this as, "False!"

--- a/dada/installer-disabled/templates/rich_filemanager_connector_config.tmpl
+++ b/dada/installer-disabled/templates/rich_filemanager_connector_config.tmpl
@@ -12,7 +12,7 @@ $config = [
      * Configure Logger class
      */
     "logger" => [
-        "enabled" => true,
+        "enabled" => false,
         /**
          * Default value "null".
          * Full path to log file, e.g. "/var/log/filemanager/logfile".
