uhhhhh, this makes things work correct in the UI

--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -1162,12 +1162,16 @@
 			>			
 			Configure Perl Environment
 		</label>
+		
 		<div id="perl_env_options">
+			
+			
 			<div class="panel"> 
 				<label for="additional_perllibs">
 					Additional Perl Library Paths (one per line):
 				</label>
 				<textarea name="additional_perllibs" id="additional_perllibs" rows="5"></textarea>
+			
 			</div> 
 			
 			
@@ -1179,7 +1183,8 @@
 								<li><!-- tmpl_var name --></li>
 							<!-- /tmpl_loop -->
 						</ul>
-				</strong>
+					</strong>
+				</div>
 			</div>
 		</div>
 		
