Added checkbox for digest default option to Bridge settings template.

--- a/dada/templates/plugins/bridge/default.tmpl
+++ b/dada/templates/plugins/bridge/default.tmpl
@@ -1016,7 +1016,20 @@
 				<!-- tmpl_var digest_schedule_popup_menu -->
 			</div> 
 		</div> 
-		
+		<div class="row">
+			<div class="small-12 columns">				
+				<label for="digest_bydefault"> 
+					<input 
+						type="checkbox" 
+						name="digest_bydefault" 
+						id="digest_bydefault" 
+						value="1" 
+						<!-- tmpl_if list_settings.digest_bydefault --> checked="checked"<!-- /tmpl_if -->
+					>
+					Set Delivery Preferences to Digest By Default
+				</label> 
+			</div> 
+		</div> 
 	</fieldset> 
 
 
