replace zero clipboard w/clipboard.js

--- a/dada/templates/html_code_screen.tmpl
+++ b/dada/templates/html_code_screen.tmpl
@@ -57,8 +57,8 @@
 				<div class="small-12 columns">
 					<button 
 						type="button" 
-						class="zclip expand" 
-						data-zclip-target-id="minimal_subscription_form"
+						class="copy_button expand" 						
+						data-clipboard-target="#minimal_subscription_form"
 						>
 							Copy
 					</button>
@@ -87,8 +87,8 @@
 				<div class="small-12 columns">
 					<button 
 						type="button" 
-						class="zclip expand" 
-						data-zclip-target-id="full_subscription_form"
+						class="copy_button expand" 						
+						data-clipboard-target="#full_subscription_form"
 						>
 							Copy
 					</button>
@@ -111,8 +111,8 @@
 				<div class="small-12 columns">
 					<button 
 						type="button" 
-						class="zclip expand" 
-						data-zclip-target-id="modal_menu_subscription_form_head"
+						class="copy_button expand" 
+						data-clipboard-target="#modal_menu_subscription_form_head"
 						>
 							Copy
 					</button>
@@ -132,8 +132,8 @@
 				<div class="small-12 columns">
 					<button 
 						type="button" 
-						class="zclip expand" 
-						data-zclip-target-id="modal_menu_subscription_form_body"
+						class="copy_button expand" 
+						data-clipboard-target="#modal_menu_subscription_form_body"
 						>
 							Copy
 					</button>
