--- a/dada/templates/plugins/bridge/default.tmpl
+++ b/dada/templates/plugins/bridge/default.tmpl
@@ -200,8 +200,8 @@
 							<div class="large-2 medium-2 columns">
 					 			<button 
 					 				type="button" 
-					 				class="zclip postfix" 
-					 				data-zclip-target-id="bridge_mail_forward_pipe_command"
+					 				class="copy_button postfix" 
+									data-clipboard-target="#bridge_mail_forward_pipe_command"									
 					 			>
 					 					Copy
 					 				</button>
