--- a/dada/templates/web_services.tmpl
+++ b/dada/templates/web_services.tmpl
@@ -60,8 +60,8 @@
 	 			<button 
 		
 	 				type="button" 
-	 				class="zclip postfix" 
-	 				data-zclip-target-id="public_api_key"
+	 				class="copy_button postfix" 
+	  				data-clipboard-target="#public_api_key"
 	 			>
 	 					Copy
 	 				</button>
@@ -80,8 +80,8 @@
 	 			<button 
 		
 	 				type="button" 
-	 				class="zclip postfix" 
-	 				data-zclip-target-id="private_api_key"
+	 				class="copy_button postfix" 
+					data-clipboard-target="#private_api_key"
 	 			>
 	 					Copy
 	 				</button>
