--- a/dada/templates/scheduled_jobs.tmpl
+++ b/dada/templates/scheduled_jobs.tmpl
@@ -61,8 +61,9 @@
   			<button 
 			
   				type="button" 
-  				class="zclip postfix" 
-  				data-zclip-target-id="cronjob_url"
+  				class="postfix copy_button" 
+  				data-clipboard-target="#cronjob_url"
+				alt="Copy to clipboard"
   			>
   					Copy
   				</button>
