Adding, "old school" layout option

--- a/dada/templates/mass_mailing_options_screen.tmpl
+++ b/dada/templates/mass_mailing_options_screen.tmpl
@@ -175,6 +175,20 @@
 					</label>
 		
 		
+		
+		<label for="mass_mailing_default_layout_old_school">
+				<input 
+					type="radio"
+					name="mass_mailing_default_layout"
+					id="mass_mailing_default_layout_old_school"
+					value="old_school"
+					<!-- tmpl_if expr="(currently_selected_layout eq 'old_school')" -->
+						checked="checked"
+					<!-- /tmpl_if -->
+					>
+					Old School
+				</label>
+		
 				<label for="mass_mailing_default_layout_none">
 					<input 
 						type="radio"
