--- a/dada/templates/send_email_layout_widget.tmpl
+++ b/dada/templates/send_email_layout_widget.tmpl
@@ -44,6 +44,21 @@
 						</label>
 					
 					
+					<label for="layout_old_school">
+							<input 
+								type="radio"
+								name="layout"
+								id="layout_old_school"
+								value="old_school"
+								<!-- tmpl_if expr="(default_layout eq 'old_school')" -->
+									checked="checked"
+								<!-- /tmpl_if -->
+								>
+								Old School
+							</label>
+							
+							
+					
 					<label for="layout_none">
 						<input 
 							type="radio"
