Themes for Pro Dada, Global Config For All!

--- a/dada/templates/email_themes_screen.tmpl
+++ b/dada/templates/email_themes_screen.tmpl
@@ -29,6 +29,16 @@
 <!--/tmpl_if-->
 
 
+<!-- tmpl_if GIVE_PROPS_IN_ADMIN -->
+		<p class="text-center">
+			<a href="http://dadamailproject.com/purchase/pro.html" target="_blank" class="button success">
+				<em>
+					Upgrade to <strong>Pro Dada</strong> for over a dozen+ more included email themes!
+					</em>
+				</a>
+		</p>
+<!-- /tmpl_if -->
+
 
 <form 
 	action="<!-- tmpl_var S_PROGRAM_URL -->" 
