--- a/dada/templates/partial_sending_options_widget.tmpl
+++ b/dada/templates/partial_sending_options_widget.tmpl
@@ -11,7 +11,7 @@
 				<input 
 				type="button" 
 				value="Preview..." 
-				class="button small cautionary preview_message_receivers" 
+				class="button small warning preview_message_receivers" 
 				>
 			</li>
 		</ul> 
