--- a/dada/templates/send_email_options_widget.tmpl
+++ b/dada/templates/send_email_options_widget.tmpl
@@ -7,13 +7,23 @@
 			  	<a href="#send_email_archive_options">
 					Archiving
 				</a>
-			</li>
-			  <li class="tab-title"><a href="#partial_sending_options">
-			  	Partial Mailing List Sending
-				</a></li>
+				</li>
+				 <li class="tab-title"><a href="#partial_sending_options">
+			  	   Partial Mailing List Sending
+					</a>
+			     </li>
+
+			  <li class="tab-title">
+				  <a href="#analytics">
+			  		  Analytics
+				 </a>
+			   </li>
+
+			 
 			  <li class="tab-title"><a href="#send_email_test_recipient">
 			  	Testing
-				</a></li>
+				</a>
+			   </li>
 			</ul>
 			
 			<dl class="accordion" data-accordion>
@@ -33,6 +43,15 @@
 						</div>
 					</div>
 
+
+					<a href="#analytics" class="show-for-small-only">Analytics</a>
+					<div id="analytics" class="content">
+						<div class="content-box section-box">
+							<!-- tmpl_include send_email_analytics_widget.tmpl --> 
+						</div>
+					</div>
+					
+					
 					<a href="#send_email_test_recipient" class="show-for-small-only">Testing</a>
 					<div id="send_email_test_recipient" class="content">
 						<div class="content-box section-box">
