Just make sure we've got the right module installed.

--- a/dada/templates/send_email_analytics_widget.tmpl
+++ b/dada/templates/send_email_analytics_widget.tmpl
@@ -1,5 +1,11 @@
 <!-- begin send_email_analytics_widget.tmpl -->
 
+<!-- tmpl_unless can_use_HTML_Tree --> 
+	<div class="alert-box alert radius">
+		Disabled. The following CPAN Perl module will need to be installed: HTML::Tree. 
+	</div>
+<!-- /tmpl_unless --> 
+
 
 <div class="row">
 	<div class="small-12 columns">
