--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -1598,9 +1598,9 @@
 						MIME::LITE::HTML
 					</label>
 
-					<label for="debugging_options_MAIL_POP3CLIENT">
-						<input type="checkbox" name="debugging_options_MAIL_POP3CLIENT" id="debugging_options_MAIL_POP3CLIENT" value="1">			
-						Mail::POP3Client
+					<label for="debugging_options_NET_POP3">
+						<input type="checkbox" name="debugging_options_NET_POP3" id="debugging_options_NET_POP3" value="1">			
+						NET_POP3
 					</label>
 
 					<label for="debugging_options_NET_SMTP">
