--- a/dada/templates/mail_sending_options_screen.tmpl
+++ b/dada/templates/mail_sending_options_screen.tmpl
@@ -132,6 +132,19 @@
 					>
 				</div> 
 			</div>
+			
+			<!-- tmpl_unless can_use_IO_Socket_SSL --> 
+				<div class="row"> 
+					<div class="small-1  columns"></div>
+		        	<div class="small-11 columns">
+						<div class="alert-box warning radius"> 
+							The IO::Socket::SSL CPAN Perl module needs to be installed for you to be able to 
+							utilize SSL or STARTTLS.
+						</div>
+					</div>
+				</div>
+			<!-- /tmpl_unless -->
+			
 			<div class="row"> 
 				<div class="small-1  columns"></div>
 	        	<div class="small-11 columns">	
@@ -145,11 +158,52 @@
 					> 
 				    <label for="use_smtp_ssl">
 						 Use Secure Sockets Layer (SSL)
-
 			        </label>
     
 				</div> 
 			</div>
+			<div class="row">
+				<div class="small-2 columns">
+				</div>
+				<div class="small-10 columns">
+					<label for="smtp_starttls">
+						<input 
+							type="checkbox" 
+							name="smtp_starttls" 
+							id="smtp_starttls" 
+							value="1"
+							<!-- tmpl_if list_settings.smtp_starttls -->
+								checked="checked"
+							<!-- /tmpl_if -->
+						>
+						Upgrade from an insecure connection (STARTTLS)
+					</label>
+				</div>
+			</div>
+	
+			<div class="row">
+				<div class="small-2 columns">
+				</div>
+				<div class="small-10 columns">
+					<label for="smtp_ssl_verify_mode">
+						<input 
+							type="checkbox" 
+							name="smtp_ssl_verify_mode" 
+							id="smtp_ssl_verify_mode" 
+							value="1"
+							<!-- tmpl_if list_settings.smtp_ssl_verify_mode -->
+								checked="checked"
+							<!-- /tmpl_if -->
+							>
+						Verify SSL Certificate
+					</label>
+				</div>
+			</div>
+	
+	
+	
+	
+	
 			<div class="row"> 
 				<div class="small-1  columns">
 				</div>
@@ -175,7 +229,11 @@
 				</div>
 			</div>
 		
+		
 		<div id="smtp_authentication"> 
+		
+		
+		
 			<div class="row"> 
 				<div class="small-1  columns"></div>
 		        <div class="small-11 columns">	
@@ -200,24 +258,7 @@
 				
 			
 			
-				<div class="row">
-					<div class="small-2 columns">
-					</div>
-					<div class="small-10 columns">
-						<label for="smtp_starttls">
-							<input 
-								type="checkbox" 
-								name="smtp_starttls" 
-								id="smtp_starttls" 
-								value="1"
-								<!-- tmpl_if list_settings.smtp_starttls -->
-									checked="checked"
-								<!-- /tmpl_if -->
-							>
-							Upgrade from an insecure connection (STARTTLS)
-						</label>
-					</div>
-				</div>
+	
 				
 				
 			    <div class="row"> 
