--- a/dada/installer-disabled/templates/dada_config.tmpl
+++ b/dada/installer-disabled/templates/dada_config.tmpl
@@ -204,7 +204,7 @@ $DEBUG_TRACE = {
     DBI             =>  <!-- tmpl_var debugging_options_DBI              default="0" -->,
     HTML_TEMPLATE   =>  <!-- tmpl_var debugging_options_HTML_TEMPLATE    default="0" -->,
     MIME_LITE_HTML  =>  <!-- tmpl_var debugging_options_MIME_LITE_HTML   default="0" -->,
-    MAIL_POP3CLIENT =>  <!-- tmpl_var debugging_options_MAIL_POP3CLIENT  default="0" -->,
+    NET_POP3        =>  <!-- tmpl_var debugging_options_NET_POP3         default="0" -->,
     NET_SMTP        =>  <!-- tmpl_var debugging_options_NET_SMTP         default="0" -->,
 );
 
