Adds a new tab that just lists the required form fields needed so that you can create (and style!) your own form.

--- a/dada/templates/html_code_screen.tmpl
+++ b/dada/templates/html_code_screen.tmpl
@@ -43,6 +43,13 @@
 			Modal Window Subscription Form
 		</a>
 	</li>
+	
+	<li class="tab-title">
+		<a href="#form_fields">
+			Form Fields
+		</a>
+	</li>
+	
 </ul>
 	
 	
@@ -159,8 +166,21 @@
  				</a>
   		  </div>
 	  </div>
+	  
+	  
+
+	
 	</div>
 	
+	<div class="content" id="form_fields"> 
+		
+		<div class="alert-box info radius">
+			Create your own subscription form for your mailing list, by using the following form fields:
+		</div>	
+			
+			<!-- tmpl_var form_fields_example -->
+			
+	</div>
 	
 </div> 
 <!-- end html_code_screen.tmpl -->
